Changed readme file name, added paragraphs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <header><title>subscribe for minecraft tutorials</title></header>
 <body>
-Hello world, goodbye world
+   <p>
+       Hello world, goodbye world.
+   </p>
+   <p>
+       p
+   </p>
+
 </body>
 </html>
