Made website title more professional

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<header><title>subscribe for minecraft tutorials</title></header>
+<header><title>Tim's Home</title></header>
 <body>
    <p>
        Hello world, goodbye world.
